[package]
name = "utemplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexical-core = { version = "0.8.5", features = ["write-integers", "write-floats"], default-features = false }
utemplate_macro = { version = "0.1.0", path = "../utemplate_macro" }
